--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.20",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
+    "mongoose": "^8.5.2",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "postcss": "8.4.40",
     "react": "18.3.1",
     "react-dom": "18.3.1",
